Informe con imagenes - Claude

--- a/report/config/doc_style.tex
+++ b/report/config/doc_style.tex
@@ -40,9 +40,9 @@
            &  &  & Guillermo Murillo Tirado \\
            &  {\large Departamento de matemáticas} &  &  \\
            &  &  & \\
-           & {\large Derivados de renta variable 2025-I} &  & \textbf{Docente:} \\
-           &  &  & Alejandra Sanchez Vásquez \\
-           & {\Large Modelo GARCH para la volatilidad} &  & asanchezva@unal.edu.co \\
+           & {\large Cadenas de Markov 2025-II} &  & \textbf{Docente:} \\
+           &  &  & Freddy Hernandez \\
+           & {\Large  Muestreo MCMC vs Simulación Ising} &  & fhernandez@unal.edu.co \\
            &  &  &  \\
            \hline
       \end{tabular}\\
