--- a/notebooks/ising_experiments_optimized.ipynb
+++ b/notebooks/ising_experiments_optimized.ipynb
@@ -37,15 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andrespl/anaconda3/lib/python3.13/site-packages/numpy/_core/getlimits.py:548: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
+      "This warnings indicates broken support for the dtype!\n",
+      "  machar = _get_machar(dtype)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Librerías optimizadas importadas exitosamente\n",
-      "NumPy version: 2.2.5\n",
+      "NumPy version: 2.1.3\n",
       "Numba JIT compilation habilitada\n"
      ]
     }
@@ -4680,7 +4689,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
